[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
futures-util = { version = "0.3", features = ["sink"] }
http = "1"
tokio = { version = "1", features = ["full"] }
tokio-websockets = { version = "0.5", features = ["client", "fastrand", "server", "sha1_smol"] }